@@ -497,6 +497,7 @@ extern "C"
     TS_CONFIG_NET_SOCK_RECV_BUFFER_SIZE_OUT,
     TS_CONFIG_NET_SOCK_SEND_BUFFER_SIZE_OUT,
     TS_CONFIG_NET_SOCK_OPTION_FLAG_OUT,
+    TS_CONFIG_HTTP_FORWARD_PROXY_AUTH_TO_PARENT,
     TS_CONFIG_HTTP_ANONYMIZE_REMOVE_FROM,
     TS_CONFIG_HTTP_ANONYMIZE_REMOVE_REFERER,
     TS_CONFIG_HTTP_ANONYMIZE_REMOVE_USER_AGENT,
