@@ -1,6 +1,10 @@
                                                          -*- coding: utf-8 -*-
 
 Changes with Apache Traffic Server 3.0.2
+  *) [TS-906]: We do not honor / use the configuration option for
+   proxy.config.http.forward.proxy_auth_to_parent.
+   Author: Conan Wang
+
   *) [TS-967]: Allow for our default -O3 options to be overriden via CFLAGS/CXXFLAGS
    Author: Arno Toell and igalic
 
